Standardize project pages heading, action buttons
Add project title from project page and action buttons
from project page to all project sub-pages that are listing
pages: components, controls, POA&Ms, deployments, assessments

Refactor no longer used code from Project Page
* Remove no longer used per-module invitation tracking from project page to improve performance (siteapp.views.project).
* Remove no longer used per-module user's discussion information from project page to improve performance (siteapp.views.project).
* Simplify display of questionnaire modules.
* Remove progress bar from questionnaire modules to improve performance (templates/project.html).

Standardize components, controls, POA&Ms, deployments, assessments listing pages
* Update project sub-pages for components to include project title section and action buttons on the right side.

Developer
* Clean up various indentations for better code folding.
* Developer moved {% block action_buttons %} to project-base.html to be more DRY across project sub pages

--- a/templates/controls/_style-controls.html
+++ b/templates/controls/_style-controls.html
@@ -16,8 +16,8 @@
   }
 
   #above-tab-content, #tab-content {
-    max-width: 950px;
-    margin: auto;
+    /*max-width: 950px;*/
+    /*margin: auto;*/
   }
 
   .control-text {
