--- a/templates/systems/sar_list.html
+++ b/templates/systems/sar_list.html
@@ -1,36 +1,25 @@
-{% extends "base.html" %}
+{% extends "project-base.html" %}
 {% load humanize %}
 {% load guardian_tags %}
-{% load system_tags %}
 {% load static %}
 {% load q %}
+{% load system_tags %}
 
 {% block title %}
-{{ portfolio.title }} System Inventory
+  POA&Ms
 {% endblock %}
 
 {% block head %}
+{{block.super}}
 {% include "controls/_style-controls.html" %}
 {% endblock %}
 
-{% block contextbar %}{% endblock %}
+<!-- action buttons included from project-base.html -->
+<!-- authoring_tool_enabled included from project-base.html -->
 
-{% block body %}
-
+{% block body_content %}
 <div  class="systems-top">
   <div class="container">
-
-  <div class="row">
-    <div id="above-tab-content" class="row">
-      <!-- Page Title-->
-      <div class="systems-title">
-          <h2 class="control-heading">
-            <a href="{{ project.get_absolute_url }}" class="systems-link">{{ system.root_element.name }}</a> &gt; System Assessment Results
-          </h2>
-      </div>
-    </div>
-  </div><!--/row-->
-    <p>&nbsp;</p>
 
     <div id="tab-content" class="row rows-header">
         <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 systems-poam">System Assessment Results</div>
@@ -69,7 +58,6 @@
   </div>
 </div>
 
-{{ block.super }}
 {% endblock %}
 
 {% block scripts %}
