--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -22,7 +22,7 @@
     <div class="systems-top">
         <div class="container">
 
-            <div id="tab-content" class="row rows-header" style="border:1px solid black;">
+            <div id="tab-content" class="row rows-header">
                 <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3"><span class="systems-selected-components">Selected Components</span></div>
             </div>
 
