--- a/templates/controls/statement_history.html
+++ b/templates/controls/statement_history.html
@@ -27,13 +27,27 @@
                     <tr>
                         <td class="col-xs-1 col-sm-1 col-md-1">{{ smt_record.history_id }}</td>
                         <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_user }}</td>
-                        <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_date }}</td>
-                        <td>{{ smt_record.body }}</td>
-                         <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_change_reason }}</td>
+                        <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_date }}{{ smt_record.body|length }}{{ smt_record.history_change_reason|length }}</td>
+                    {% if  smt_record.body|length <= 10  or smt_record.history_change_reason|length <= 10 %}
+                        <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.body }}</td>
+                        <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_change_reason }}</td>
+                    {% else %}
+                        <td class="col-xs-2 col-sm-2 col-md-2">
+                        <details>
+                        <summary>Click to read</summary>
+                        <p>{{ smt_record.body }}</p>
+                        </details>
+                        </td>
+                        <td class="col-xs-2 col-sm-2 col-md-2">
+                        <details>
+                        <summary>Click to read</summary>
+                        <p>{{ smt_record.history_change_reason }}</p>
+                        </details></td>
+                    {% endif %}
                     <form method="post" action = "{% url 'restore_to' smt_id=smt_record.id history_id=smt_record.history_id %}" id="import-form">
                      {% csrf_token %}
-                        <td>{% if not forloop.first %}<input type="text" class="form-control" id="change_reason" placeholder="Enter your reason to here." onchange="change_reason_update('restore_{{ forloop.counter0 }}', this.value)">{% endif %}</td>
-                        <td class="col-xs-2 col-sm-2 col-md-2">{% if not forloop.first %} <button type="submit"  name="restore_{{ forloop.counter0 }}" id="restore_{{ forloop.counter0 }}" class="btn btn-xs btn-primary" value="hihi">Restore to this version</button>{% endif %}</td>
+                        <td>{% if not forloop.first %}<textarea rows="4"  type="text" class="form-control" id="change_reason" placeholder="Enter your reason." onchange="change_reason_update('restore_{{ forloop.counter0 }}', this.value)"></textarea >{% endif %}</td>
+                        <td>{% if not forloop.first %}<button type="submit"  name="restore_{{ forloop.counter0 }}" id="restore_{{ forloop.counter0 }}" class="btn btn-xs btn-primary " value="restoring">Restore to this version</button>{% endif %}</td>
                     </form>
                     </tr>
                 {% endfor %}
