--- a/templates/project.html
+++ b/templates/project.html
@@ -267,7 +267,7 @@
       </div>
     </div>
   {% endif %}
-
+  <div><p>&nbsp;</p></div>
     <div class="row">
       <div class="col-sm-12" class="project-row-style">
         <span class="status-section-header">Questionnaires / Compliance App</span>
